WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231743
[LFC][IFC] tryBreakingTextRun should not take std::nullopt "available width" to indicate that the run is not overflowing
https://bugs.webkit.org/show_bug.cgi?id=231743
Summary
[LFC][IFC] tryBreakingTextRun should not take std::nullopt "available width" ...
alan
Reported
2021-10-14 08:44:58 PDT
ssia
Attachments
Patch
(24.76 KB, patch)
2021-10-14 08:48 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(23.77 KB, patch)
2021-10-14 09:55 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-10-14 08:48:44 PDT
Created
attachment 441221
[details]
Patch
alan
Comment 2
2021-10-14 09:55:35 PDT
Created
attachment 441230
[details]
Patch
EWS
Comment 3
2021-10-14 11:52:36 PDT
Committed
r284188
(
243002@main
): <
https://commits.webkit.org/243002@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 441230
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-10-14 11:53:15 PDT
<
rdar://problem/84267170
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug