[LFC][IFC] tryBreakingTextRun should not take std::nullopt "available width" to indicate that the run is not overflowing https://bugs.webkit.org/show_bug.cgi?id=231743

Reviewed by Antti Koivisto.

Let's not use magic value to indicate that the candidate run for breaking does not overflow the line (available width is nullopt -> infinite available width -> never overflow).

* layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::tryBreakingTextRun const):
(WebCore::Layout::InlineContentBreaker::tryBreakingOverflowingRun const):
(WebCore::Layout::InlineContentBreaker::tryBreakingPreviousNonOverflowingRuns const):
(WebCore::Layout::InlineContentBreaker::tryBreakingNextOverflowingRuns const):
* layout/formattingContexts/inline/InlineContentBreaker.h:
* layout/integration/LayoutIntegrationCoverage.cpp:
(WebCore::LayoutIntegration::canUseForRenderInlineChild):


Canonical link: https://commits.webkit.org/243002@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284188 268f45cc-cd09-0410-ab3c-d52691b4dbfc